--- a/reviewboard/static/rb/css/common.less
+++ b/reviewboard/static/rb/css/common.less
@@ -587,7 +587,6 @@ form table td {
     padding: 0;
     position: relative;
     white-space: nowrap;
-    z-index: @z-index-account-nav-list;
 
     &:hover {
       background: @headerbar-bg-active;
