--- a/reviewboard/static/rb/css/defs.less
+++ b/reviewboard/static/rb/css/defs.less
@@ -97,9 +97,8 @@
 @z-index-dialog: 100;
 @z-index-diff-collapse-btn: 100;
 @z-index-menu: 110;
-@z-index-spinner: 120;
 @z-index-page-overlay: 130;
-@z-index-account-nav-list: 1010;
+@z-index-spinner: 140;
 
 // Comment flags
 @comment-flag-color: #a1c0e3;
